<resources>
    <string name="app_name">InterviewTaskGrootan</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="prod">prod</string>
    <string name="dev">dev</string>
    <string name="timer">Timer</string>
    <string name="_30">30</string>
    <string name="signout">SignOut</string>
    <string name="welcome">Welcome</string>
    <string name="textview">TextView</string>
    <string name="scramble">Scramble</string>
    <string name="_60">60</string>

</resources>